--- a/package.json
+++ b/package.json
@@ -16,7 +16,9 @@
     "react-dom": "^19.1.0",
     "tailwindcss": "^4.1.10",
     "wouter": "^3.7.1",
-    "zod": "^3.25.64"
+    "zod": "^3.25.64",
+    "zustand": "^5.0.5",
+    "zustand-persist": "^0.4.0"
   },
   "devDependencies": {
     "@eslint/js": "^9.25.0",
