--- a/package.json
+++ b/package.json
@@ -11,9 +11,22 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "@react-aria/combobox": "^3.12.5",
+    "@react-aria/listbox": "^3.14.6",
+    "@react-aria/overlays": "^3.27.3",
+    "@react-stately/combobox": "^3.10.6",
+    "@react-stately/list": "^3.12.3",
+    "@react-types/combobox": "^3.13.6",
     "@tailwindcss/vite": "^4.1.10",
+    "date-fns": "^4.1.0",
+    "downshift": "^9.0.9",
     "react": "^19.1.0",
+    "react-aria-components": "^1.10.1",
+    "react-calendar": "^6.0.0",
+    "react-datepicker": "^8.4.0",
     "react-dom": "^19.1.0",
+    "react-stately": "^3.39.0",
+    "rsuite": "^5.83.1",
     "tailwindcss": "^4.1.10",
     "wouter": "^3.7.1",
     "zod": "^3.25.64",
@@ -25,6 +38,7 @@
     "@stylistic/eslint-plugin": "^5.0.0-beta.3",
     "@types/react": "^19.1.2",
     "@types/react-dom": "^19.1.2",
+    "@types/wouter": "^2.0.1",
     "@vitejs/plugin-react-swc": "^3.9.0",
     "daisyui": "^5.0.43",
     "eslint": "^9.25.0",
