--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "version": "0.0.0",
   "type": "module",
   "scripts": {
-    "dev": "bunx --bun vite",
+    "dev": "vite",
     "build": "tsc -b && vite build",
     "lint": "eslint .",
     "lint:fix": "eslint . --fix",
@@ -17,6 +17,8 @@
     "@react-stately/combobox": "^3.10.6",
     "@react-stately/list": "^3.12.3",
     "@react-types/combobox": "^3.13.6",
+    "@stripe/react-stripe-js": "^3.7.0",
+    "@stripe/stripe-js": "^7.4.0",
     "@tailwindcss/vite": "^4.1.10",
     "date-fns": "^4.1.0",
     "downshift": "^9.0.9",
