--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "downshift": "^9.0.9",
     "react": "^19.1.0",
     "react-aria-components": "^1.10.1",
+    "react-bootstrap": "^2.10.10",
     "react-calendar": "^6.0.0",
     "react-datepicker": "^8.4.0",
     "react-dom": "^19.1.0",
