--- a/package.json
+++ b/package.json
@@ -29,6 +29,8 @@
     "react-datepicker": "^8.4.0",
     "react-dom": "^19.1.0",
     "react-stately": "^3.39.0",
+    "react-hook-form": "7.60.0",
+    "react-day-picker": "9.8.0",
     "rsuite": "^5.83.1",
     "swr": "^2.3.4",
     "tailwindcss": "^4.1.10",
