--- a/package.json
+++ b/package.json
@@ -8,7 +8,8 @@
     "build": "tsc -b && vite build",
     "lint": "eslint .",
     "lint:fix": "eslint . --fix",
-    "preview": "vite preview"
+    "preview": "vite preview",
+    "test": "vitest"
   },
   "dependencies": {
     "@react-aria/combobox": "^3.12.5",
@@ -41,23 +42,34 @@
   },
   "devDependencies": {
     "@eslint/js": "^9.25.0",
+    "@fast-check/vitest": "^0.2.2",
     "@stylistic/eslint-plugin": "^5.0.0-beta.3",
+    "@testing-library/jest-dom": "^6.6.3",
+    "@testing-library/react": "^16.3.0",
+    "@testing-library/user-event": "^14.6.1",
     "@types/react": "^19.1.2",
     "@types/react-dom": "^19.1.2",
     "@types/wouter": "^2.0.1",
     "@vitejs/plugin-react-swc": "^3.9.0",
+    "cypress": "^14.5.2",
     "daisyui": "^5.0.43",
     "eslint": "^9.25.0",
     "eslint-plugin-react-hooks": "^5.2.0",
     "eslint-plugin-react-refresh": "^0.4.19",
+    "fast-check": "^4.2.0",
     "globals": "^16.0.0",
+    "msw": "^2.10.4",
     "typescript": "~5.8.3",
     "typescript-eslint": "^8.30.1",
-    "vite": "^6.3.5"
+    "vite": "^6.3.5",
+    "vitest": "^3.2.4",
+    "zod-fast-check": "^0.10.1"
   },
   "trustedDependencies": [
     "@swc/core",
     "@tailwindcss/oxide",
-    "esbuild"
+    "cypress",
+    "esbuild",
+    "msw"
   ]
 }
