--- a/tsconfig.json
+++ b/tsconfig.json
@@ -5,6 +5,9 @@
     { "path": "./tsconfig.node.json" }
   ],
   "compilerOptions": {
-    "strict": true
-  }
+    "strict": true,
+    // https://github.com/testing-library/jest-dom?tab=readme-ov-file#with-vitest
+    "types": ["vitest/globals", "@testing-library/jest-dom"]
+  },
+  "include": ["vitest.config.ts", "tests/**/*.ts", "tests/**/*.tsx"]
 }
