added static map

--- a/package.json
+++ b/package.json
@@ -15,9 +15,11 @@
     "@stripe/react-stripe-js": "^3.7.0",
     "@stripe/stripe-js": "^7.4.0",
     "@tailwindcss/vite": "^4.1.10",
+    "maplibre-gl": "^5.6.1",
     "react": "^19.1.0",
-    "react-hook-form": "7.60.0",
     "react-day-picker": "9.8.0",
+    "react-hook-form": "7.60.0",
+    "react-map-gl": "^8.0.4",
     "swr": "^2.3.4",
     "tailwindcss": "^4.1.10",
     "wouter": "^3.7.1",
