--- a/package.json
+++ b/package.json
@@ -20,12 +20,15 @@
     "@tailwindcss/vite": "^4.1.10",
     "date-fns": "^4.1.0",
     "downshift": "^9.0.9",
+    "map": "^1.0.1",
+    "maplibre": "^0.0.1-security",
     "react": "^19.1.0",
     "react-aria-components": "^1.10.1",
     "react-bootstrap": "^2.10.10",
     "react-calendar": "^6.0.0",
     "react-datepicker": "^8.4.0",
     "react-dom": "^19.1.0",
+    "react-maplibre": "^1.0.0",
     "react-stately": "^3.39.0",
     "rsuite": "^5.83.1",
     "swr": "^2.3.4",
