Updated styling for DropDown, created test cases for DropDown component.

--- a/tsconfig.json
+++ b/tsconfig.json
@@ -7,7 +7,15 @@
   "compilerOptions": {
     "strict": true,
     // https://github.com/testing-library/jest-dom?tab=readme-ov-file#with-vitest
-    "types": ["vitest/globals", "@testing-library/jest-dom"]
+    "types": ["vitest/globals", "@testing-library/jest-dom"],
+    "declaration": true,
+
+    "emitDeclarationOnly": false,
+    "outDir": "./dist",
+    "moduleResolution": "bundler",
+    "jsx": "react-jsx",
+    "module": "ESNext",
+    "target": "ESNext"
   },
-  "include": ["vitest.config.ts", "tests/**/*.ts", "tests/**/*.tsx"]
+  "include": ["vitest.config.ts", "tests/**/*.ts", "tests/**/*.tsx", "src"]
 }
