--- a/tsconfig.json
+++ b/tsconfig.json
@@ -15,7 +15,8 @@
     "moduleResolution": "bundler",
     "jsx": "react-jsx",
     "module": "ESNext",
-    "target": "ESNext"
+    "target": "ESNext",
+    "esModuleInterop": true,
   },
   "include": ["vitest.config.ts", "tests/**/*.ts", "tests/**/*.tsx", "src"]
 }
