Added tests for TypeaheadSearch and DestinationSearch components, updated the HotelSearch store to include countryName, and made necessary adjustments in the DestinationSearch component to use the new store structure. Update Name of Hotel to show up on Nav Bar.

--- a/tsconfig.json
+++ b/tsconfig.json
@@ -19,5 +19,5 @@
     "target": "ESNext",
     "esModuleInterop": true,
   },
-  "include": ["vitest.config.ts", "tests/**/*.ts", "tests/**/*.tsx", "src"]
+  "include": ["vitest.config.ts", "tests/**/*.ts", "tests/**/*.tsx", "src", "__mocks__/**/*"]
 }
