--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "@stripe/react-stripe-js": "^3.7.0",
     "@stripe/stripe-js": "^7.4.0",
     "@tailwindcss/vite": "^4.1.10",
+    "dompurify": "^3.2.6",
     "fast-check": "^4.2.0",
     "ky": "^1.8.2",
     "maplibre-gl": "^5.6.1",
