partially working e2e test for 'make hotel booking'
bun install
bun install cypress
bunx cypress open

--- a/tsconfig.json
+++ b/tsconfig.json
@@ -9,7 +9,7 @@
     "strict": true,
     "jsx": "react-jsx",
     // https://github.com/testing-library/jest-dom?tab=readme-ov-file#with-vitest
-    "types": ["vitest/globals", "@testing-library/jest-dom"],
+    "types": ["cypress", "vitest/globals", "@testing-library/jest-dom"],
     "moduleResolution": "bundler",
     "module": "ESNext",
     "target": "ESNext",
