--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -7,11 +7,6 @@ on:
     branches: [main]
 
 jobs:
-  backend:
-    uses: YongJunLim/hotel-booking-backend/.github/workflows/backend-setup.yml@main
-    secrets:
-      STRIPE_SECRET_KEY: ${{ secrets.STRIPE_SECRET_KEY }}
-
   test:
     runs-on: ubuntu-latest
 
@@ -19,8 +14,36 @@ jobs:
       matrix:
         bun-version: [latest]
 
+    services:
+      mongo:
+        image: mongo:8.0
+        ports:
+          - 27017:27017
+      redis:
+        image: redis:7
+        ports:
+          - 6379:6379
+      backend:
+        image: ghcr.io/your-org/hotel-booking-backend:latest
+        env:
+          PORT: 9000
+          MONGO_URI: mongodb://mongo:27017/hotel-bookings
+          TEST_MONGO_URI: mongodb://mongo:27017/hotel-bookings-test
+          JWT_SECRET: abcdefg
+          API_URL: https://hotelapi.loyalty.dev/api/
+          REDIS_URL: redis://redis:6379
+          STRIPE_SECRET_KEY: ${{ secrets.STRIPE_SECRET_KEY }}
+          ALLOWED_ORIGINS: "*"
+        ports:
+          - 9000:9000
+        options: >-
+          --health-cmd="curl --fail http://localhost:9000/health || exit 1"
+          --health-interval=10s
+          --health-timeout=5s
+          --health-retries=10
+
     env:
-      VITE_BACKEND_URL: ${{ needs.backend.outputs.backend_url }}
+      VITE_BACKEND_URL: http://localhost:9000
 
     steps:
       - name: Checkout code
