--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -68,7 +68,7 @@ jobs:
         ports:
           - 9000:9000
         options: >-
-          --health-cmd="curl --fail http://localhost:9000/health || exit 1"
+          --health-cmd="curl --fail http://localhost:9000/api/v1/health || exit 1"
           --health-interval=10s
           --health-timeout=5s
           --health-retries=10
