--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -14,37 +14,6 @@ jobs:
       matrix:
         bun-version: [latest]
 
-    steps:
-      - name: Log in to GitHub Container Registry
-        uses: docker/login-action@v3
-        with:
-          registry: ghcr.io
-          username: ${{ github.actor }}
-          password: ${{ secrets.PAT }}
-
-      - name: Checkout code
-        uses: actions/checkout@v4
-
-      - name: Setup Bun
-        uses: oven-sh/setup-bun@v2
-        with:
-          bun-version: ${{ matrix.bun-version }}
-
-      - name: Install dependencies
-        run: bun install --frozen-lockfile
-
-      # - name: Run linter
-      #   run: bun run lint
-      # Currently, CheckoutForm.test.tsx and BookingPage.tsx will fail
-
-      - name: Run type checking
-        run: bun run build
-
-      - name: Run tests
-        env:
-          VITE_BACKEND_URL: http://localhost:9000
-        run: bun run test
-
     services:
       mongo:
         image: mongo:8.0
@@ -72,3 +41,40 @@ jobs:
           --health-interval=10s
           --health-timeout=5s
           --health-retries=10
+
+    steps:
+      # - name: Log in to GitHub Container Registry
+      #   uses: docker/login-action@v3
+      #   with:
+      #     registry: ghcr.io
+      #     username: ${{ github.actor }}
+      #     password: ${{ secrets.PAT }}
+
+      - name: Checkout code
+        uses: actions/checkout@v4
+
+      - name: Setup Bun
+        uses: oven-sh/setup-bun@v2
+        with:
+          bun-version: ${{ matrix.bun-version }}
+
+      - name: Install dependencies
+        run: bun install --frozen-lockfile
+
+      # - name: Run linter
+      #   run: bun run lint
+      # Currently, CheckoutForm.test.tsx and BookingPage.tsx will fail
+
+      - name: Run type checking
+        run: bun run build
+
+      - name: Run tests
+        env:
+          VITE_BACKEND_URL: http://localhost:9000
+        run: bun run test
+
+      - name: Print backend logs on failure
+        if: failure()
+        run: |
+          docker ps -a
+          docker logs $(docker ps -aqf "ancestor=ghcr.io/yongjunlim/hotel-booking-backend:latest")
